[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cosne"
version = "0.0.1"
description = "CO-SNE: code from https://github.com/yunhuiguo/CO-SNE"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pillow",
    "scikit-learn",
    "scipy",
    "seaborn",
    "torch",
    "torchvision",
    "geoopt @ git+https://github.com/geoopt/geoopt.git",
]

[tool.setuptools.packages.find]
include = ["hyptorch", "pvae"]
