[build-system]
requires = ["setuptools>=69", "wheel"]          # wheel avoids another warning
build-backend = "setuptools.build_meta"

[project]
name = "cosne"
version = "0.0.1"
requires-python = ">=3.11"
description = "CO-SNE fork"
dependencies = [
    "numpy",
    "pillow",
    "scikit-learn",
    "scipy",
    "seaborn",
    "torch",
    "torchvision",
    "geoopt @ git+https://github.com/geoopt/geoopt.git",
]

# ---- key part ----
[tool.setuptools]
packages = ["hyptorch", "pvae"]                 # nothing else gets packaged
